--- a/2 Layouts/AboutMe/app/src/main/res/values/strings.xml
+++ b/2 Layouts/AboutMe/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
         incredibly excited to graduate so I can start my \n
         life as a developer, get a house, het a dog and settle down.
     </string>
+    <string name="what_is_your_nickname">What is your Nickname?</string>
+    <string name="done">Done</string>
 </resources>
